color contrast issues fixed

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -124,7 +124,7 @@ section.hero {
     grid-template-rows: repeat(6, min-content);
     height: 100vh;
     width: 100%;
-    background-image: url("../assets/heroimg.webp");
+    background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.473)), url("../assets/heroimg.webp");
     background-repeat: no-repeat;
     background-size: cover;
     color: white;
